Added date comparison rule

--- a/sample/src/main/res/layout/activity_validator.xml
+++ b/sample/src/main/res/layout/activity_validator.xml
@@ -8,6 +8,8 @@
             type="com.github.giacomoparisi.droidboxsample.ui.validator.ValidatorViewModel" />
 
         <import type="com.github.giacomoparisi.droidbox.validator.adapter.type.EValidatorType" />
+
+        <import type="com.github.giacomoparisi.droidbox.validator.rule.DateDroidValidatorRule.EDateRuleType" />
     </data>
 
     <ScrollView
@@ -151,6 +153,45 @@
                     android:inputType="text"
                     android:maxLines="1"
                     validator_minLength="@{3}" />
+            </android.support.design.widget.TextInputLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DATE RULES"
+                android:textStyle="bold|italic"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <EditText
+                    android:id="@+id/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="Date"
+                    android:inputType="date"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="Date After"
+                    android:inputType="date"
+                    android:maxLines="1"
+                    validator_date_comparison="@{@id/date}"
+                    validator_date_comparisonSourceFieldFormat='@{"dd/MM/yyyy"}'
+                    validator_date_comparisonTargetFieldFormat='@{"dd/MM/yyyy"}'
+                    validator_date_comparisonType="@{EDateRuleType.AFTER}" />
             </android.support.design.widget.TextInputLayout>
 
             <Button
