--- a/sample/src/main/res/layout/activity_validator.xml
+++ b/sample/src/main/res/layout/activity_validator.xml
@@ -36,7 +36,7 @@
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -49,7 +49,7 @@
                         android:inputType="text"
                         android:maxLines="1"
                         validator_empty="@{true}" />
-                </android.support.design.widget.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
                     android:layout_width="100dp"
@@ -68,7 +68,7 @@
                 android:textSize="20sp"
                 android:layout_marginTop="20dp" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -80,9 +80,9 @@
                     android:inputType="text"
                     android:maxLines="1"
                     validator_match="@{@id/matcher_confirm_field}" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -94,7 +94,7 @@
                     android:hint="Matcher Confirm"
                     android:inputType="text"
                     android:maxLines="1" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
                 android:textSize="20sp"
                 android:layout_marginTop="20dp" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -116,7 +116,7 @@
                     android:inputType="text"
                     android:maxLines="1"
                     validator_type="@{EValidatorType.EMAIL}" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -126,7 +126,7 @@
                 android:textSize="20sp"
                 android:layout_marginTop="20dp" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -138,9 +138,9 @@
                     android:inputType="text"
                     android:maxLines="1"
                     validator_maxLength="@{3}" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -152,7 +152,7 @@
                     android:inputType="text"
                     android:maxLines="1"
                     validator_minLength="@{3}" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -162,7 +162,7 @@
                 android:textSize="20sp"
                 android:layout_marginTop="20dp" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -174,9 +174,9 @@
                     android:hint="Date"
                     android:inputType="date"
                     android:maxLines="1" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -191,7 +191,7 @@
                     validator_date_comparisonSourceFieldFormat='@{"dd/MM/yyyy"}'
                     validator_date_comparisonTargetFieldFormat='@{"dd/MM/yyyy"}'
                     validator_date_comparisonType="@{EDateRuleType.AFTER}" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -201,7 +201,7 @@
                 android:textSize="20sp"
                 android:layout_marginTop="20dp" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
@@ -214,7 +214,7 @@
                     android:inputType="phone"
                     android:maxLines="1"
                     validator_regex="@{@string/VALIDATOR_Regex}" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:layout_width="match_parent"
